<resources>
    <string name="app_name">Dispray</string>
    <string name="bluetooth_settings">Device Bluetooth Settings</string>
    <string name="submit">Submit</string>
    <string name="settings">Settings</string>
    <string name="uv_light">UV Light</string>
    <string name="laser_guidance">Laser Guidance</string>
    <string name="user_proficiency_level">User Proficiency Level</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="hardware_modules">Hardware Modules</string>
    <string name="ar_modules">AR Modules</string>
    <string name="warning">Position Warnings</string>
    <string name="paint">Virtual Paint</string>
    <string name="bounds">Spray Bounds</string>
    <string name="dist">Distance Indicator</string>
    <string name="cost">Cost Indicator</string>
</resources>